--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "vercel-build": "npm ci && npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
